upload & review page wxml draft

--- a/project.config.json
+++ b/project.config.json
@@ -60,6 +60,18 @@
         {
           "name": "pages/upload/upload",
           "pathName": "pages/upload/upload",
+          "query": "",
+          "scene": null
+        },
+        {
+          "name": "pages/index/index",
+          "pathName": "pages/index/index",
+          "query": "",
+          "scene": null
+        },
+        {
+          "name": "pages/index/review",
+          "pathName": "pages/index/review",
           "scene": null
         }
       ]
