--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -3,8 +3,15 @@
     "pages/index/index",
     "pages/userConsole/userConsole",
     "pages/profile/profile",
-    "pages/upload/upload"
+    "pages/upload/upload",
+    "pages/index/review"
   ],
+  "plugins": {
+    "sdkPlugin": {
+      "version": "3.15.0",
+      "provider": "wxc6b86e382a1e3294"
+    }
+  },
   "window": {
     "backgroundColor": "#F6F6F6",
     "backgroundTextStyle": "light",
@@ -14,25 +21,26 @@
   },
   "sitemapLocation": "sitemap.json",
   "style": "v2",
-
   "tabBar": {
-    "list": [{
-      "pagePath": "pages/index/index",  
-      "text": "Toliet",
-      "iconPath": "/images/bathroom.png",
-      "selectedIconPath": "/images/bathroom.png"
-    }, {
-      "pagePath": "pages/upload/upload",
-      "text": "Upload",
-      "iconPath": "/images/upload.png",
-      "selectedIconPath": "/images/upload.png"
-    }, {
-      "pagePath": "pages/profile/profile",
-      "text": "ProfileUser",
-      "iconPath": "/images/profile.png",
-      "selectedIconPath": "/images/profile.png"
-    }]
+    "list": [
+      {
+        "pagePath": "pages/index/index",
+        "text": "Toliet",
+        "iconPath": "/images/bathroom.png",
+        "selectedIconPath": "/images/bathroom.png"
+      },
+      {
+        "pagePath": "pages/upload/upload",
+        "text": "Upload",
+        "iconPath": "/images/upload.png",
+        "selectedIconPath": "/images/upload.png"
+      },
+      {
+        "pagePath": "pages/profile/profile",
+        "text": "ProfileUser",
+        "iconPath": "/images/profile.png",
+        "selectedIconPath": "/images/profile.png"
+      }
+    ]
   }
-
-
 }
