--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -9,7 +9,7 @@
     "backgroundColor": "#F6F6F6",
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#F6F6F6",
-    "navigationBarTitleText": "云开发 QuickStart",
+    "navigationBarTitleText": "I Gotta Go",
     "navigationBarTextStyle": "black"
   },
   "sitemapLocation": "sitemap.json",
@@ -32,7 +32,12 @@
       "iconPath": "/images/profile.png",
       "selectedIconPath": "/images/profile.png"
     }]
+  },
+  "plugins": {
+    "sdkPlugin": {
+      "version": "3.15.0",
+      "provider": "wxc6b86e382a1e3294"
+    }
   }
-
 
 }
