--- a/project.config.json
+++ b/project.config.json
@@ -72,6 +72,13 @@
         {
           "name": "pages/index/review",
           "pathName": "pages/index/review",
+          "query": "",
+          "scene": null
+        },
+        {
+          "name": "pages/profile/profile",
+          "pathName": "pages/profile/profile",
+          "query": "",
           "scene": null
         }
       ]
