--- a/project.config.json
+++ b/project.config.json
@@ -78,6 +78,7 @@
         {
           "name": "pages/profile/profile",
           "pathName": "pages/profile/profile",
+          "query": "",
           "scene": null
         }
       ]
