preview in works

--- a/project.config.json
+++ b/project.config.json
@@ -80,6 +80,11 @@
           "pathName": "pages/profile/profile",
           "query": "",
           "scene": null
+        },
+        {
+          "name": "pages/index/review-2",
+          "pathName": "pages/index/review-2",
+          "scene": null
         }
       ]
     }
