--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -10,6 +10,10 @@
     "sdkPlugin": {
       "version": "3.15.0",
       "provider": "wxc6b86e382a1e3294"
+    },
+    "routePlan": {
+      "version": "1.0.10",
+      "provider": "wx50b5593e81dd937a"
     }
   },
   "window": {
@@ -45,4 +49,5 @@
       "desc": "Allow app to access location?"
     }
   }
+
 }
