worked on some images css

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -28,7 +28,7 @@
   "tabBar": {
     "list": [{
       "pagePath": "pages/index/index",  
-      "text": "Toliet",
+      "text": "Toilet",
       "iconPath": "/images/bathroom.png",
       "selectedIconPath": "/images/bathroom.png"
     }, {
